@@ -1,11 +1,28 @@
 package jScope;
 
 /* $Id$ */
-import java.awt.*;
-import java.io.*;
-import java.awt.image.*;
-import java.awt.color.*;
-import java.util.*;
+import java.awt.Canvas;
+import java.awt.Dimension;
+import java.awt.Image;
+import java.awt.MediaTracker;
+import java.awt.Point;
+import java.awt.Rectangle;
+import java.awt.image.BufferedImage;
+import java.awt.image.ColorModel;
+import java.awt.image.DataBuffer;
+import java.awt.image.DataBufferByte;
+import java.awt.image.DataBufferUShort;
+import java.awt.image.PixelGrabber;
+import java.awt.image.Raster;
+import java.awt.image.WritableRaster;
+import java.io.ByteArrayInputStream;
+import java.io.DataInputStream;
+import java.io.IOException;
+import java.util.Enumeration;
+import java.util.Hashtable;
+import java.util.Vector;
+
+import javax.imageio.ImageIO;
 
 class Frames extends Canvas
 {
@@ -81,11 +98,11 @@ class Frames extends Canvas
             bitClip = false;
             colorMap = new ColorMap();
             recentFrames = new Hashtable<>();
-            Enumeration fds = fc.recentFrames.keys();
+            Enumeration<Integer> fds = fc.recentFrames.keys();
             while(fds.hasMoreElements())
             {
-                Integer idx = (Integer)fds.nextElement();
-                FrameDescriptor fDescr = (FrameDescriptor)fc.recentFrames.get(idx);
+                Integer idx = fds.nextElement();
+                FrameDescriptor fDescr = fc.recentFrames.get(idx);
                 recentFrames.put(idx, fDescr);
             }
 
@@ -216,7 +233,8 @@ class Frames extends Canvas
                     break;
                 }
                 case FrameData.AWT_IMAGE :
-                    img = Toolkit.getDefaultToolkit().createImage(buf);
+                    pixelSize = 0; //pixelSize == 0 means that the image is not a bitmap (jpg, gif...)
+                    img = ImageIO.read(new ByteArrayInputStream(buf));
                     break;
                 default:
                     return;
@@ -255,52 +273,58 @@ class Frames extends Canvas
             if(fDesc.updateCount == updateCount) //fDesc.updatedImage  is still ok
                 return fDesc.updatedImage;
             //Othewise it is necessary to update it
-            ColorModel colorModel = colorMap.getIndexColorModel( (pixelSize < 32 ? pixelSize : 16) );
-            Image img = new BufferedImage(colorModel, ((BufferedImage)fDesc.image).getRaster(), false, null);
-            if(bitShift != 0)
+            Image img ;
+            if(pixelSize > 0)
             {
-                BufferedImage bi = (BufferedImage)img;
-                ByteArrayInputStream b = new ByteArrayInputStream(fDesc.buffer);
-                DataInputStream din = new DataInputStream(b);
-
-                WritableRaster wr = bi.getRaster();
-                DataBuffer db = wr.getDataBuffer();
-                int nPixels = db.getSize()/bytesPerPixel;
-                if(nPixels != frameDim.width * frameDim.height)
+                ColorModel colorModel = colorMap.getIndexColorModel( (pixelSize < 32 ? pixelSize : 16) );
+                img = new BufferedImage(colorModel, ((BufferedImage)fDesc.image).getRaster(), false, null);
+                if(bitShift != 0)
                 {
-                    System.out.println("INTERNAL ERRROR: Inconsistend frame dimension when getting frame");
-                    return null;
-                }
+                    BufferedImage bi = (BufferedImage)img;
+                    ByteArrayInputStream b = new ByteArrayInputStream(fDesc.buffer);
+                    DataInputStream din = new DataInputStream(b);
 
-                int val;
-                int absBitShift = Math.abs(bitShift);
-                for(int j = 0; j < nPixels; j++)
-                {
-                    if(frameType == FrameData.BITMAP_IMAGE_8)
-                        val = din.readByte();
-                    else if(frameType == FrameData.BITMAP_IMAGE_16)
-                        val = din.readShort();
-                    else
-                        val = din.readInt();
-
-                    if(bitShift > 0)
+                    WritableRaster wr = bi.getRaster();
+                    DataBuffer db = wr.getDataBuffer();
+                    int nPixels = db.getSize()/bytesPerPixel;
+                    if(nPixels != frameDim.width * frameDim.height)
                     {
-                        val = val << bitShift ;
-                        if(bitClip)
-                            db.setElem(j, val > 255 ? 255 : val);
-                        else
-                            db.setElem(j, val);
+                        System.out.println("INTERNAL ERRROR: Inconsistend frame dimension when getting frame");
+                        return null;
                     }
-                    else
+
+                    int val;
+                    int absBitShift = Math.abs(bitShift);
+                    for(int j = 0; j < nPixels; j++)
                     {
-                         val = val >> absBitShift ;
-                       if(bitClip)
-                            db.setElem(j, val > 255 ? 255 : val);
+                        if(frameType == FrameData.BITMAP_IMAGE_8)
+                            val = din.readByte();
+                        else if(frameType == FrameData.BITMAP_IMAGE_16)
+                            val = din.readShort();
                         else
-                            db.setElem(j, val);
+                            val = din.readInt();
+
+                        if(bitShift > 0)
+                        {
+                            val = val << bitShift ;
+                            if(bitClip)
+                                db.setElem(j, val > 255 ? 255 : val);
+                            else
+                                db.setElem(j, val);
+                        }
+                        else
+                        {
+                             val = val >> absBitShift ;
+                           if(bitClip)
+                                db.setElem(j, val > 255 ? 255 : val);
+                            else
+                                db.setElem(j, val);
+                        }
                     }
                 }
             }
+            else //Non bitmap image (j[pg,  gif...)
+                img = fDesc.image;
             tracker = new MediaTracker(Frames.this);
             tracker.addImage(img, idx);
             try {
@@ -423,14 +447,11 @@ class Frames extends Canvas
     Frames(Frames frames)
     {
         this();
-        Image img;
-
         cache = new FrameCache(frames.cache);
 
         if(frame_time.size() != 0)
             frame_time.removeAllElements();
 
-        float buf_values[] = null;
         if(frames.zoom_rect != null)
             zoom_rect = new Rectangle(frames.zoom_rect);
         if(frames.view_rect != null)
@@ -492,7 +513,7 @@ class Frames extends Canvas
         curr_frame_idx = 0;
         float t[] = fd.GetFrameTimes();
         for(int i = 0; i < t.length; i++)
-            frame_time.addElement(new Float(t[i]));
+            frame_time.addElement(Float.valueOf(t[i]));
 /*      int n_frames = fd.GetNumFrames();
         float t[] = fd.GetFrameTimes();
         byte[] buf;
@@ -677,10 +698,6 @@ class Frames extends Canvas
 */
     public void shiftImagePixel(int bitShift, boolean bitClip)
     {
-        BufferedImage bi;
-        float values[] = null; 
-        boolean right = false;
- 
         cache.shiftImagePixel(bitShift, bitClip);
     }
 /*
@@ -779,7 +796,7 @@ class Frames extends Canvas
 
         int img_size = d.height*d.width * num_byte_pixel;
         byte tmp[] = new byte[img_size];
-        int i, j , k , l, ofs;
+        int j , k , l;
 
         int h = vertical_flip ? d.height - 1: 0;
         int w = horizontal_flip ? d.width - 1: 0;
@@ -929,8 +946,10 @@ class Frames extends Canvas
          
         Point p = getImageBufferPoint(x,y);
         
-        if(imgBuf != null)
-            return (int)imgBuf[(p.y * img_width) + p.x];
+        try {
+            if(imgBuf != null)
+                return (int)imgBuf[(p.y * img_width) + p.x];
+        }catch(Exception exc) {return -1;}
         return -1;
     }
 
@@ -967,7 +986,7 @@ class Frames extends Canvas
     {
         Point p;
         int n_point = (int) (Math.sqrt( Math.pow((double)(st_x - end_x), 2.0) + Math.pow((double)(st_y - end_y), 2.0)) + 0.5);
-        int e_x, s_x, x, y;
+        int x, y;
         int pixels_line[] = {pixel_array[(st_y * img_width) + st_x], pixel_array[(st_y * img_width) + st_x]};
 
         grabFrame();
@@ -996,7 +1015,7 @@ class Frames extends Canvas
     {
         Point p;
         int n_point = (int) (Math.sqrt( Math.pow((double)(st_x - end_x), 2.0) + Math.pow((double)(st_y - end_y), 2.0)) + 0.5);
-        int e_x, s_x, x, y;
+        int x, y;
         //float values_line[] = {values_array[(st_y * img_width) + st_x], values_array[(st_y * img_width) + st_x]};
         float values_line[]; 
             
@@ -1549,12 +1568,12 @@ class Frames extends Canvas
        return curr_frame_idx;
     }
 
-    public Object GetFrame(int idx, Dimension d)
+    public Image GetFrame(int idx, Dimension d)
     {
         return GetFrame(idx);
     }
 
-    public Object GetFrame(int idx)
+    public Image GetFrame(int idx)
     {
 
 
